--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "(\"art vandelay\").title # 'Art Vandelay'\n"
+    "(\"art vandelay\").title() # 'Art Vandelay'\n"
    ]
   },
   {
