--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    },
    "outputs": [],
    "source": [
-    "s = 'vandelay.com' # 'www.vandelay.com'\n"
+    "''+'vandelay.com' # 'www.vandelay.com'\n"
    ]
   },
   {
